Add: Updated tests and some  optimization